# context-mixing-audio-text

./: README.md  pyproject.toml
config/alignment/: fleurs_iber_alignment.yaml
config/attribution/: fleurs_iber_en_xx.yaml
sample_data/: en_ca.aligned_huberts.txt  en_ca.audio_target.txt  en_ca.entire_sequence.txt  en_ca.fleurs.tsv
scripts/: launch_attr_captum_lang.sh  launch_attr_captum_vi.sh
src/: data.py  forced_alignment.py  main.py  utils.py
src/cmix/: data.py  main.py  utils.py  viz.ipynb
src/cmix/alignment/: README.md  forced_alignment.py
